--- a/public/views/admin/editBlog.hbs
+++ b/public/views/admin/editBlog.hbs
@@ -15,7 +15,7 @@
                 <div class="container container--wide p-0 my-5">
                     <div class="p-3">
                         <div class="d-flex justify-content-between align-items-center">
-                            <h4 class="title-page m-0 py-3"><strong>New Blog</strong></h4>
+                            <h4 class="title-page m-0 py-3"><strong>Edit Blog</strong></h4>
                         </div>
                     </div>
                     <div class="alert alert-danger" style="display:none"></div>
