--- a/public/views/admin/addBlog.hbs
+++ b/public/views/admin/addBlog.hbs
@@ -40,8 +40,9 @@
                                     <label>Status</label>
                                     <select name="status" id="status" class="form-control">
                                         <option value="" selected hidden>Select...</option>
-                                        <option value="Draff">Draff</option>
-                                        <option value="Publish">Publish</option>
+                                        {{#each blogStatus}}
+                                            <option value="{{ this }}" {{#if @last }}selected{{/if}}>{{ this }}</option>
+                                        {{/each}}
                                     </select>
                                 </div>
                             </div>
