--- a/public/views/admin/blog.hbs
+++ b/public/views/admin/blog.hbs
@@ -7,22 +7,22 @@
     <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-        <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
+        {{!-- <h1 class="h3 mb-2 text-gray-800">Tables</h1> --}}
+        {{!-- <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
             For more information about DataTables, please visit the <a target="_blank"
-                href="https://datatables.net">official DataTables documentation</a>.</p>
+                href="https://datatables.net">official DataTables documentation</a>.</p> --}}
 
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+                <h6 class="m-0 font-weight-bold text-primary">List Of Blog</h6>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                         <thead>
                             <tr>
-                                <th>Id</th>
+                                <th></th>
                                 <th>Title</th>
                                 <th>createdAt</th>
                                 <th>View</th>
@@ -31,7 +31,7 @@
                         </thead>
                         <tfoot>
                             <tr>
-                                <th>Id</th>
+                                <th></th>
                                 <th>Title</th>
                                 <th>createdAt</th>
                                 <th>View</th>
@@ -55,44 +55,7 @@
                             {{/if}}
 
                         </tbody>                        
-                        {{!-- <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                            </tr>
-                        </thead>
-                        <tfoot>
-                            <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                            </tr>
-                        </tfoot>
-                        <tbody>
-                            <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                            </tr>
-                            <tr>
-                                <td>Donna Snider</td>
-                                <td>Customer Support</td>
-                                <td>New York</td>
-                                <td>27</td>
-                                <td>2011/01/25</td>
-                                <td>$112,000</td>
-                            </tr>
-                        </tbody> --}}
+                        
                     </table>
                 </div>
             </div>
@@ -122,7 +85,7 @@
 <script>
     // Call the dataTables jQuery plugin
     $(document).ready(function() {
-        $('#dataTable').DataTable({
+        var t = $('#dataTable').DataTable({
             dom: 'Bfrtip',
             buttons: [
                 {
@@ -135,15 +98,22 @@
             ]
         });
 
+        t.on( 'order.dt search.dt', function () {
+            let i = 1;
+    
+            t.cells(null, 0, {search:'applied', order:'applied'}).every( function (cell) {
+                this.data(i++);
+            } );
+        } ).draw();
     });
     $(document).on('click', '.editBlog', async function(){
         var id = $(this).data('id') + ''
         console.log('editBlog id=>',id)
-        window.location.href = "{{ host }}/blog/"+id;
+        window.location.href = "{{ host }}/blog/edit/"+id;
     })
     $(document).on('click', '.deleteBlog', async function(){
         var id = $(this).data('id') + ''
-        console.log('deleteBlog id=>',id)
+        window.location.href = "{{ host }}/blog/delete/"+id;
     })
 
 </script>
