--- a/public/views/partials/admin-nav.hbs
+++ b/public/views/partials/admin-nav.hbs
@@ -42,7 +42,7 @@
             <li class="nav-item dropdown no-arrow">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{#if profile}}{{ profile.fullname }}{{else}}Douglas McGee{{/if}}</span>
                     <img class="img-profile rounded-circle"
                         src="{{ host }}/images/profile.svg">
                 </a>
