--- a/public/views/admin/addBlog.hbs
+++ b/public/views/admin/addBlog.hbs
@@ -67,5 +67,9 @@
     tinymce.init({
         selector: 'textarea'
     });
+
+    $(document).ready(function () {
+
+    })
 </script>
 {{>admin-footer}}
