--- a/public/views/partials/admin-sidebar.hbs
+++ b/public/views/partials/admin-sidebar.hbs
@@ -37,9 +37,22 @@
             </div>
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="{{ host }}/blog">
+                <a class="nav-link spinner" href="{{ host }}/blog">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Blog</span></a>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Logout
+            </div>
+            <li class="nav-item">
+                <a class="nav-link spinner" href="{{ host }}/signin/out">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Logout</span></a>
             </li>
 
             <!-- Divider -->
