--- a/public/views/sign/signin.hbs
+++ b/public/views/sign/signin.hbs
@@ -16,7 +16,30 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="my-5">
-                    <form id="signinForm" method="post" action="{{ host }}/signin">
+                    <form class="needs-validation" novalidate method="post" action="{{ host }}/signin">
+                        <div class="form-row">
+                            <div class="col-md-12 mb-3">
+                                <label for="validationCustom01">Email</label>
+                                <input type="email" class="form-control" id="validationCustom01" name="email" type="email" value="{{ data.email }}" placeholder="Email address"
+                                    value="" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-12 mb-3">
+                                <label for="validationCustom02">Password</label>
+                                <input type="password" class="form-control" id="validationCustom02" name="password" placeholder="Password"
+                                    value="" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                            </div>
+                        </div>                        
+                        <button class="btn btn-primary" type="submit">SIGN IN</button>
+                    </form>                    
+                    {{!-- <form id="signinForm" method="post" action="{{ host }}/signin">
                         <div class="form-floating">
                             <input class="form-control" id="email" name="email" type="email" placeholder="Enter your email..." data-sb-validations="required,email" value="{{ data.email }}" />
                             <label for="email">Email address</label>
@@ -38,30 +61,8 @@
                         <div class="d-none" id="submitErrorMessage"><div class="text-center p-3 mb-2 bg-danger text-white">{{ err.responseMessage }}</div></div>
                         <!-- Submit Button-->
                         <button class="btn btn-primary text-uppercase spinner" id="submitButton" type="submit">Sign in</button>
-                    </form>                    
-                    {{!-- <form id="siginForm" data-sb-form-api-token="API_TOKEN" method="post" action="{{ host }}/signin">
-                        <div class="form-floating">
-                            <input class="form-control" id="email" type="email" placeholder="Enter your email..." data-sb-validations="required,email" />
-                            <label for="email">Email address</label>
-                            <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                            <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                        </div>
-                        <div class="form-floating">
-                            <input class="form-control" id="password" type="password" placeholder="Enter your password..." data-sb-validations="required" />
-                            <label for="password">Password</label>
-                            <div class="invalid-feedback" data-sb-feedback="password:required">A password is required.</div>
-                        </div>
-                        <br />
-                        <div class="d-none" id="submitSuccessMessage">
-                            <div class="text-center mb-3">
-                                <div class="fw-bolder">Form submission successful!</div>
-                                To activate this form, sign up at
-                            </div>
-                        </div>
-                        <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                        <!-- Submit Button-->
-                        <button class="btn btn-primary text-uppercase disabled spinner" id="submitButton" type="submit">Submit</button>
-                    </form> --}}
+                    </form>                     --}}
+                   
                 </div>
             </div>
         </div>
