--- a/public/views/admin/blog.hbs
+++ b/public/views/admin/blog.hbs
@@ -47,8 +47,8 @@
                                         <th>{{ this.createdAt }}</th>
                                         <th>{{ this.iView }}</th>
                                         <th>
-                                            <button class="btn btn-warning px-3 btn-sm editBlog" data-id="{{ this._id }}"><i class="far fa-edit"></i></button>
-                                            <button class="btn btn-danger px-3 btn-sm deleteBlog" data-id="{{ this._id }}"><i class="far fa-trash-alt"></i></button>
+                                            <button class="btn btn-warning px-3 btn-sm editBlog spinner" data-id="{{ this._id }}"><i class="far fa-edit"></i></button>
+                                            <button class="btn btn-danger px-3 btn-sm deleteBlog spinner" data-id="{{ this._id }}"><i class="far fa-trash-alt"></i></button>
                                         </th>
                                     </tr>
                                 {{/each}}
