--- a/public/views/home/article.hbs
+++ b/public/views/home/article.hbs
@@ -56,13 +56,13 @@
                                     <div class="form-group fl_icon">
                                         <div class="icon"><i class="fa fa-user"></i></div>
                                         <input type="hidden" id="blogId" name="blogId" value="">
-                                        <input class="form-input" type="text" id="name" name="name" placeholder="Your name">
+                                        <input class="form-input" type="text" id="name" name="name" placeholder="Your name" required>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 fl_icon">
                                     <div class="form-group fl_icon">
                                         <div class="icon"><i class="fa fa-envelope-o"></i></div>
-                                        <input class="form-input" type="text" id="email" name="email" placeholder="Your email">
+                                        <input class="form-input" type="text" id="email" name="email" placeholder="Your email" required>
                                     </div>
                                 </div>
                                 <div class="col-xs-12">
@@ -87,7 +87,7 @@
     $("#frmComment").submit(function(event){
         spinner.show();
         // Prevent default posting of form - put here to work in case of errors
-        event.preventDefault();
+        event.preventDefault(); 
 
         if (request) {
             request.abort();
