--- a/public/views/partials/nav.hbs
+++ b/public/views/partials/nav.hbs
@@ -1,15 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">Simple Blog</a>
+        <a class="navbar-brand spinner" href="{{ host }}">Simple Blog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ host }}">Home</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ host }}/signin">Sign in</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ host }}/signup">Sign up</a></li>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 spinner" href="{{ host }}">Home</a></li>
+                {{#if profile}}
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 spinner" href="{{ host }}/blog">Admin Dashboard</a></li>
+                {{else}}
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 spinner" href="{{ host }}/signin">Sign in</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 spinner" href="{{ host }}/signup">Sign up</a></li>
+                {{/if}}
             </ul>
         </div>
     </div>
